; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_crypto_core.c_decrypt_data.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_crypto_core.c_decrypt_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crypto_box_BEFORENMBYTES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @decrypt_data(i32* %0, i32* %1, i32* %2, i32* %3, i32 %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32* %5, i32** %13, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %6
  %20 = load i32*, i32** %9, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %19, %6
  store i32 -1, i32* %7, align 4
  br label %41

23:                                               ; preds = %19
  %24 = load i32, i32* @crypto_box_BEFORENMBYTES, align 4
  %25 = zext i32 %24 to i64
  %26 = call i8* @llvm.stacksave()
  store i8* %26, i8** %14, align 8
  %27 = alloca i32, i64 %25, align 16
  store i64 %25, i64* %15, align 8
  %28 = load i32*, i32** %8, align 8
  %29 = load i32*, i32** %9, align 8
  %30 = call i32 @encrypt_precompute(i32* %28, i32* %29, i32* %27)
  %31 = load i32*, i32** %10, align 8
  %32 = load i32*, i32** %11, align 8
  %33 = load i32, i32* %12, align 4
  %34 = load i32*, i32** %13, align 8
  %35 = call i32 @decrypt_data_symmetric(i32* %27, i32* %31, i32* %32, i32 %33, i32* %34)
  store i32 %35, i32* %16, align 4
  %36 = mul nuw i64 4, %25
  %37 = trunc i64 %36 to i32
  %38 = call i32 @sodium_memzero(i32* %27, i32 %37)
  %39 = load i32, i32* %16, align 4
  store i32 %39, i32* %7, align 4
  %40 = load i8*, i8** %14, align 8
  call void @llvm.stackrestore(i8* %40)
  br label %41

41:                                               ; preds = %23, %22
  %42 = load i32, i32* %7, align 4
  ret i32 %42
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @encrypt_precompute(i32*, i32*, i32*) #2

declare dso_local i32 @decrypt_data_symmetric(i32*, i32*, i32*, i32, i32*) #2

declare dso_local i32 @sodium_memzero(i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
